chore: add function to start and stop kafka consumption

--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,7 @@
 serving_port: 8872
 #kafka_broker: datalake-kafka-kafka-brokers.datalake-kafka-brokers.svc.cluster.local:9092
-kafka_broker: minikube:31063
-kafka_topic: public.openatms.systemtrack
+kafka_broker: 127.0.0.1:9093
+kafka_topic: RAW-FIXM42-OPER.v2
 hashtags:
   - elonmask
   - bitcoin
