--- a/k8s/rest-kafka-consumer/templates/serviceaccount.yaml
+++ b/k8s/rest-kafka-consumer/templates/serviceaccount.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "sam-twitter.serviceAccountName" . }}
+  name: {{ include "rest-kafka-consumer.serviceAccountName" . }}
   labels:
-    {{- include "sam-twitter.labels" . | nindent 4 }}
+    {{- include "rest-kafka-consumer.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
