--- a/k8s/rest-kafka-consumer/templates/configmap.yaml
+++ b/k8s/rest-kafka-consumer/templates/configmap.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ include "sam-twitter.fullname" . }}
+  name: {{ include "rest-kafka-consumer.fullname" . }}
   labels:
-    {{- include "sam-twitter.labels" . | nindent 4 }}
+    {{- include "rest-kafka-consumer.labels" . | nindent 4 }}
 data:
   sam-config.yaml: |
     {{- .Values.samConfig | toYaml | nindent 4 }}
