--- a/k8s/rest-kafka-consumer/templates/hpa.yaml
+++ b/k8s/rest-kafka-consumer/templates/hpa.yaml
@@ -2,14 +2,14 @@
 apiVersion: autoscaling/v2beta1
 kind: HorizontalPodAutoscaler
 metadata:
-  name: {{ include "sam-twitter.fullname" . }}
+  name: {{ include "rest-kafka-consumer.fullname" . }}
   labels:
-    {{- include "sam-twitter.labels" . | nindent 4 }}
+    {{- include "rest-kafka-consumer.labels" . | nindent 4 }}
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: {{ include "sam-twitter.fullname" . }}
+    name: {{ include "rest-kafka-consumer.fullname" . }}
   minReplicas: {{ .Values.autoscaling.minReplicas }}
   maxReplicas: {{ .Values.autoscaling.maxReplicas }}
   metrics:
