--- a/k8s/rest-kafka-consumer/templates/service.yaml
+++ b/k8s/rest-kafka-consumer/templates/service.yaml
@@ -1,16 +1,15 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "sam-twitter.fullname" . }}
+  name: {{ include "rest-kafka-consumer.fullname" . }}
   labels:
-    {{- include "sam-twitter.labels" . | nindent 4 }}
+    {{- include "rest-kafka-consumer.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
     - port: {{ .Values.samConfig.serving_port }}
-      nodePort: {{ .Values.samConfig.nodePort }}
       targetPort: http
       protocol: TCP
       name: http
   selector:
-    {{- include "sam-twitter.selectorLabels" . | nindent 4 }}
+    {{- include "rest-kafka-consumer.selectorLabels" . | nindent 4 }}
