chore: implement the duration extraction between one message and the adjacent message

--- a/config.yaml
+++ b/config.yaml
@@ -1,11 +1,11 @@
 serving_port: 8872
 #kafka_broker: datalake-kafka-kafka-brokers.datalake-kafka-brokers.svc.cluster.local:9092
-kafka_broker: 127.0.0.1:9093
+kafka_broker: 127.0.0.1:32100
 kafka_topic: RAW-FIXM42-OPER.v2
 hashtags:
   - elonmask
   - bitcoin
 consumer:
-  replay-mode: true
+  replay-mode: false
   replay-type: timestamp
   replay-from: 2022-02-02T09:30:50Z
