--- a/k8s/rest-kafka-consumer/values.yaml
+++ b/k8s/rest-kafka-consumer/values.yaml
@@ -83,21 +83,16 @@ autoscaling:
 #nodeSelector: {}
 
 #tolerations: []
-tolerations:
-  - key: "NodeType"
-    operator: "Equal"
-    value: "app"
-    effect: "NoSchedule"
+tolerations: []
 
-nodeSelector:
-  type: app
+nodeSelector: {}
 affinity: {}
 samConfig:
   serving_port: 8872
   nodePort: 30072
-  kafka_broker: datalake-kafka-kafka-brokers.datalake-kafka-brokers.svc.cluster.local:9092
+  kafka_broker: bus-kafka-0.bus-kafka-brokers.kafka.svc.cluster.local:9092
   #kafka_broker: 127.0.0.1:9092
-  kafka_topic: public.openatms.systemtrack
+  kafka_topic: health-cat-json
   hashtags:
     - elonmask
     - bitcoin
