chore: implement the duration extraction between one message and the adjacent message

--- a/k8s/rest-kafka-consumer/templates/deployment.yaml
+++ b/k8s/rest-kafka-consumer/templates/deployment.yaml
@@ -16,7 +16,7 @@ spec:
     - metadata:
         name: kafkarest
       spec:
-        accessModes: [ "ReadWriteOnce" ]
+        accessModes: [ "ReadWriteMany" ]
         #storageClassName: manual
         resources:
           requests:
