--- a/k8s/rest-kafka-consumer/values.yaml
+++ b/k8s/rest-kafka-consumer/values.yaml
@@ -40,7 +40,7 @@ securityContext: {}
 
 service:
   type: ClusterIP
-  port: 8872
+  port: 8873
 
 ingress:
   ingressClassName: kong
@@ -88,11 +88,11 @@ tolerations: []
 nodeSelector: {}
 affinity: {}
 samConfig:
-  serving_port: 8872
-  nodePort: 30072
+  serving_port: 8873
+  nodePort: 30073
   kafka_broker: bus-kafka-0.bus-kafka-brokers.kafka.svc.cluster.local:9092
   #kafka_broker: 127.0.0.1:9092
-  kafka_topic: health-cat-json
+  kafka_topic: public.openatms.systemtrack
   hashtags:
     - elonmask
     - bitcoin
