--- a/k8s/sam-twitter/values.yaml
+++ b/k8s/sam-twitter/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 1
 
 image:
-  repository: samutup/sam-twitter
+  repository: samutup/kafka-producer
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: "1.0.0"
@@ -83,9 +83,9 @@ affinity: {}
 samConfig:
   serving_port: 8872
   nodePort: 30072
-  kafka_broker: datalake-kafka-kafka-brokers.datalake-kafka-brokers.svc.cluster.local:9092
+  kafka_broker: bus-kafka-0.bus-kafka-brokers.kafka.svc.cluster.local:9092
   #kafka_broker: 127.0.0.1:9092
-  kafka_topic: public.openatms.systemtrack
+  kafka_topic: test1
   hashtags:
     - elonmask
     - bitcoin
