--- a/k8s/sam-twitter/templates/deployment.yaml
+++ b/k8s/sam-twitter/templates/deployment.yaml
@@ -56,22 +56,22 @@ spec:
             - name: TWITTER_CONSUMER_KEY
               valueFrom:
                 secretKeyRef:
-                  name: twitter-account
+                  name: {{ include "sam-twitter.fullname" . }}-secrets
                   key: consumer-key
             - name: TWITTER_CONSUMER_SECRET
               valueFrom:
                 secretKeyRef:
-                  name: twitter-account
+                  name: {{ include "sam-twitter.fullname" . }}-secrets
                   key: consumer-secret
             - name: TWITTER_ACCESS_TOKEN
               valueFrom:
                 secretKeyRef:
-                  name: twitter-account
+                  name: {{ include "sam-twitter.fullname" . }}-secrets
                   key: access-token
             - name: TWITTER_ACCESS_SECRET
               valueFrom:
                 secretKeyRef:
-                  name: twitter-account
+                  name: {{ include "sam-twitter.fullname" . }}-secrets
                   key: access-secret
       volumes:
         - name: config-dir
