--- a/config.yaml
+++ b/config.yaml
@@ -1,10 +1,9 @@
 serving_port: 8872
 #kafka_broker: datalake-kafka-kafka-brokers.datalake-kafka-brokers.svc.cluster.local:9092
-kafka_broker: 127.0.0.1:9093
+kafka_broker: 127.0.0.1:29092
 kafka_topic: RAW-FIXM42-OPER.v2
 hashtags:
-  - elonmask
-  - bitcoin
+  - jokowi
 consumer:
   replay-mode: true
   replay-type: timestamp
