--- a/k8s/sam-twitter/values-test2.yaml
+++ b/k8s/sam-twitter/values-test2.yaml
@@ -12,7 +12,7 @@ image:
 
 imagePullSecrets: []
 nameOverride: ""
-fullnameOverride: ""
+fullnameOverride: "test2-producer"
 
 serviceAccount:
   # Specifies whether a service account should be created
